# fifo-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  postdoc.sh  search-index.js
examples/: Cargo.toml  README.md
examples/src/: main.rs
fifo/: WouldBlock.t.html  align_up_for_fifo_size.v.html  enum.WouldBlock.html  fn.align_up_for_fifo_size.html  fn.fifo.html  index.html  sidebar-items.js  struct.Receiver.html  struct.Sender.html
fifo/splice/: SpliceRead.t.html  SpliceWrite.t.html  index.html  sidebar-items.js  trait.SpliceRead.html  trait.SpliceWrite.html
implementors/core/convert/: trait.AsRef.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/core/ops/: trait.Drop.js
implementors/fifo/splice/: trait.SpliceWrite.js
implementors/std/io/: trait.Read.js  trait.Write.js
src/: lib.rs  shutdown.rs  splice.rs
src/fifo/: lib.rs.html  shutdown.rs.html  splice.rs.html
